--- a/index.html
+++ b/index.html
@@ -62,8 +62,16 @@
 
   <div class="section">
     <h2>Screenshots</h2>
-    <img src="images/screenshot1.png" alt="Screenshot 1">
-    <img src="images/screenshot2.png" alt="Screenshot 2">
+    <img src="images/1.png" alt="Screenshot 1">
+    <img src="images/2.png" alt="Screenshot 2">
+    <img src="images/3.png" alt="Screenshot 3">
+    <img src="images/4.png" alt="Screenshot 4">
+    <img src="images/5.png" alt="Screenshot 5">
+    <img src="images/6.png" alt="Screenshot 6">
+    <img src="images/7.png" alt="Screenshot 7">
+    <img src="images/8.png" alt="Screenshot 8">
+    <img src="images/9.png" alt="Screenshot 9">
+    <img src="images/10.png" alt="Screenshot 10">
   </div>
 
   <div class="section">
@@ -80,4 +88,7 @@
   </div>
 
 </body>
+</html>
+</body>
+
 </html>
