--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
       background-color: #e55a00;
     }
     img {
-      max-width: 80%;
-      margin: 15px 0;
+      max-width: 100%;
       border: 2px solid #ff6600;
       border-radius: 5px;
     }
     .section {
       margin: 30px 0;
       text-align: left;
-      max-width: 900px;
+      max-width: 1000px;
       margin-left: auto;
       margin-right: auto;
     }
@@ -45,6 +44,16 @@
       font-size: 0.9em;
       color: #aaa;
       margin-top: 40px;
+    }
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 15px;
+      justify-items: center;
+    }
+    .grid-item p {
+      margin-top: 5px;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -61,17 +70,19 @@
   </div>
 
   <div class="section">
-    <h2>Screenshots</h2>
-    <img src="images/1.png" alt="Screenshot 1">
-    <img src="images/2.png" alt="Screenshot 2">
-    <img src="images/3.png" alt="Screenshot 3">
-    <img src="images/4.png" alt="Screenshot 4">
-    <img src="images/5.png" alt="Screenshot 5">
-    <img src="images/6.png" alt="Screenshot 6">
-    <img src="images/7.png" alt="Screenshot 7">
-    <img src="images/8.png" alt="Screenshot 8">
-    <img src="images/9.png" alt="Screenshot 9">
-    <img src="images/10.png" alt="Screenshot 10">
+    <h2>Screenshots / Placeholders</h2>
+    <div class="grid-container">
+      <div class="grid-item"><img src="images/1.png" alt="Screenshot 1"><p>1</p></div>
+      <div class="grid-item"><img src="images/2.png" alt="Screenshot 2"><p>2</p></div>
+      <div class="grid-item"><img src="images/3.png" alt="Screenshot 3"><p>3</p></div>
+      <div class="grid-item"><img src="images/4.png" alt="Screenshot 4"><p>4</p></div>
+      <div class="grid-item"><img src="images/5.png" alt="Screenshot 5"><p>5</p></div>
+      <div class="grid-item"><img src="images/6.png" alt="Screenshot 6"><p>6</p></div>
+      <div class="grid-item"><img src="images/7.png" alt="Screenshot 7"><p>7</p></div>
+      <div class="grid-item"><img src="images/8.png" alt="Screenshot 8"><p>8</p></div>
+      <div class="grid-item"><img src="images/9.png" alt="Screenshot 9"><p>9</p></div>
+      <div class="grid-item"><img src="images/10.png" alt="Screenshot 10"><p>10</p></div>
+    </div>
   </div>
 
   <div class="section">
@@ -89,6 +100,4 @@
 
 </body>
 </html>
-</body>
 
-</html>
