--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="section">
-    <h2>Screenshots / Placeholders</h2>
+    <h2>Screenshots</h2>
     <div class="grid-container">
       <div class="grid-item"><img src="images/1.png" alt="Screenshot 1"><p>1</p></div>
       <div class="grid-item"><img src="images/2.png" alt="Screenshot 2"><p>2</p></div>
@@ -100,4 +100,5 @@
 
 </body>
 </html>
+
 
