--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
       font-size: 0.9em;
       color: #aaa;
       margin-top: 40px;
-    }
-    .screenshots-vertical img {
-      width: 80%;        /* makes each image bigger */
-      max-width: 800px;  /* optional maximum size */
-      margin: 20px 0;    /* spacing between images */
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
+   .screenshots-vertical img {
+  width: 80%;        /* makes each image bigger */
+  max-width: 800px;  /* optional maximum size */
+  margin: 20px auto; /* vertical spacing & center horizontally */
+  display: block;    /* forces each image onto its own line */
+}
   </style>
 </head>
 <body>
@@ -66,21 +63,21 @@
     <p>I started this project because I couldn’t find a full Borderlands 2 map in Minecraft, so I decided to make one myself. I wanted to bring Pandora into Minecraft with attention to detail, scale, and the iconic art style. The map is being built following the main story progression for logical exploration.</p>
   </div>
 
-  <div class="section">
-    <h2>Screenshots</h2>
-    <div class="screenshots-vertical">
-      <img src="images/1.png" alt="Screenshot 1">
-      <img src="images/2.png" alt="Screenshot 2">
-      <img src="images/3.png" alt="Screenshot 3">
-      <img src="images/4.png" alt="Screenshot 4">
-      <img src="images/5.png" alt="Screenshot 5">
-      <img src="images/6.png" alt="Screenshot 6">
-      <img src="images/7.png" alt="Screenshot 7">
-      <img src="images/8.png" alt="Screenshot 8">
-      <img src="images/9.png" alt="Screenshot 9">
-      <img src="images/10.png" alt="Screenshot 10">
-    </div>
+ <div class="section">
+  <h2>Screenshots</h2>
+  <div class="screenshots-vertical">
+    <img src="images/1.png" alt="Screenshot 1">
+    <img src="images/2.png" alt="Screenshot 2">
+    <img src="images/3.png" alt="Screenshot 3">
+    <img src="images/4.png" alt="Screenshot 4">
+    <img src="images/5.png" alt="Screenshot 5">
+    <img src="images/6.png" alt="Screenshot 6">
+    <img src="images/7.png" alt="Screenshot 7">
+    <img src="images/8.png" alt="Screenshot 8">
+    <img src="images/9.png" alt="Screenshot 9">
+    <img src="images/10.png" alt="Screenshot 10">
   </div>
+</div>
 
   <div class="section">
     <h2>Building Process</h2>
@@ -97,3 +94,4 @@
 
 </body>
 </html>
+
